Revert "Fixed spacing issues on small screens"
This reverts commit c832fbfa76b5a88afb3883f705079cd61084db77.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -727,9 +727,6 @@ div.mini-molt:hover div.mini-molt:hover {
 .mini-molt-timestamp a {
     color: inherit;
 }
-.mini-molt-actions {
-    min-width: 170px;
-}
 .mini-molt-action {
     cursor: pointer;
     color: var(--light-faded);
